apps/net-narthollis-www/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-narthollis-www
  namespace: SET_BY_ARGO
  labels:
    app.kubernetes.io/name: net-narthollis-www
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: net-narthollis-www
  template:
    metadata:
      labels:
        app.kubernetes.io/name: net-narthollis-www
    spec:
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
        runAsNonRoot: true
      containers:
      - name: net-narthollis-www
        image: ghcr.io/narthollis/net_narthollis_www:main
        ports:
        - containerPort: 8787
          name: http
        startupProbe:
          httpGet:
            port: http
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 3
        livenessProbe:
          httpGet:
            port: http
            path: /health
          periodSeconds: 60
        readinessProbe:
          httpGet:
            port: http
            path: /health
          periodSeconds: 60
        securityContext:
          readOnlyRootFilesystem: true
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 250m
