apps/net-narthollis-www/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: net-narthollis-apex
  namespace: SET_BY_ARGO
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: net-narthollis-www
    sectionName: https-gw
  hostnames:
  - narthollis.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: net-narthollis-www
      port: 80
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: net-narthollis-www-redirect
  namespace: SET_BY_ARGO
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: net-narthollis-www
    sectionName: https-gw
  hostnames:
  - www.narthollis.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: RequestRedirect
      requestRedirect:
        hostname: narthollis.net
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-to-https-redirect
  namespace: SET_BY_ARGO
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: net-narthollis-www
    sectionName: http-gw
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
